--- a/dashboard.html
+++ b/dashboard.html
@@ -42,7 +42,7 @@
 <body>
     <h1 align="center">Cafe 770 Order List</h1>
     <div class="container">
-        <a href="/orderlist">Total order List</a>
+        <a href="/">Total order List</a>
     </div>
     <div class="container">
         <div class="table-responsive">
