--- a/order.html
+++ b/order.html
@@ -41,7 +41,7 @@
 </head>
 <body>
         <div class="container">
-            <h4 align="right"><a href="/orderlist">Order List</a></h4>
+            <h4 align="right"><a href="/">Order List</a></h4>
         </div>
         <h1 align="center">Cafe 770</h1>
         <div class="container">
